RESOLVED FIXED38272
SHOULD NEVER BE REACHED assertion loading forbes.com
https://bugs.webkit.org/show_bug.cgi?id=38272
Summary SHOULD NEVER BE REACHED assertion loading forbes.com
Simon Fraser (smfr)
Reported 2010-04-28 10:52:24 PDT
I hit the SHOULD NEVER BE REACHED assertion here: (WebCore/css/CSSStyleSelector.cpp:2562 bool WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector(WebCore::CSSSelector*, WebCore::Element*, WTF::HashSet<WebCore::AtomicStringImpl*, WTF::PtrHash<WebCore::AtomicStringImpl*>, WTF::HashTraits<WebCore::AtomicStringImpl*> >*, WebCore::PseudoId&, bool, WebCore::RenderStyle*, WebCore::RenderStyle*) const) loading forbes.com
Attachments
Testcase (214 bytes, text/html)
2010-04-28 11:00 PDT, Simon Fraser (smfr)
no flags
Patch v1 (4.31 KB, patch)
2010-04-30 00:35 PDT, Shinichiro Hamaji
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2010-04-28 11:00:13 PDT
Created attachment 54587 [details] Testcase
Simon Fraser (smfr)
Comment 2 2010-04-28 11:01:27 PDT
Why are we picking up :first outside of @page?
Simon Fraser (smfr)
Comment 3 2010-04-28 11:10:53 PDT
Simon Fraser (smfr)
Comment 4 2010-04-29 15:41:15 PDT
Ping? I keep hitting this.
Darin Adler
Comment 5 2010-04-29 16:02:47 PDT
If we don’t get this resolved soon, I suggest we roll out r58374 and add a test for this to the layout tests.
Darin Adler
Comment 6 2010-04-29 16:03:09 PDT
Shinichiro Hamaji
Comment 7 2010-04-30 00:35:23 PDT
Created attachment 54787 [details] Patch v1
Shinichiro Hamaji
Comment 8 2010-04-30 00:43:56 PDT
(In reply to comment #7) > Created an attachment (id=54787) [details] > Patch v1 Hi, sorry for the latency. Yuzo is taking his vacation so I'll take care this bug. I guess rolling out r58374 can be difficult as we've already landed other patches which depend on r58374. Instead of reverting the change, I'd like to just ignore paged media related pseudo classes for now.
Shinichiro Hamaji
Comment 9 2010-04-30 08:46:18 PDT
Yuzo Fujishima
Comment 10 2010-05-05 18:23:32 PDT
Sorry for the regression and thank you for the fix. Yuzo
Note You need to log in before you can comment on or make changes to this bug.