2010-04-30  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Simon Fraser.

        SHOULD NEVER BE REACHED assertion loading forbes.com
        https://bugs.webkit.org/show_bug.cgi?id=38272

        * printing/pseudo-class-outside-page-expected.txt: Added.
        * printing/pseudo-class-outside-page.html: Added.
2010-04-30  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Simon Fraser.

        SHOULD NEVER BE REACHED assertion loading forbes.com
        https://bugs.webkit.org/show_bug.cgi?id=38272

        Ignore page media related pseudo classes.

        Test: printing/pseudo-class-outside-page.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):

git-svn-id: svn://svn.chromium.org/blink/trunk@58578 bbb929c8-8fbe-4397-9dbb-9b2b20218538